<resources>
    <string name="app_name">PackShip</string>

    <string name="save">Save</string>

    <!-- Inventories -->
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="accepted_containers">Accepted Containers</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="add_container">Add Container</string>

    <!-- Shipments -->
    <string name="revenue"> Revenue</string>
    <string name="expenses">Expenses</string>
    <string name="packed_containers">Packed Containers</string>
    <string name="assignments">Assignments</string>

    <!--Supplier -->
    <string name="maximum_weight">Max Weight</string>
    <string name="loadedWeight">Loaded Weight</string>
    <string name="loadedContainers">Containers</string>

    <!-- Container -->
    <string name="container_maximum_weight">Max Weight</string>
    <string name="cargoes">Cargoes</string>

    <!-- Cargo -->
    <string name="cargo_weight">Weight</string>
    <string name="cargo_price">Price</string>
    <string name="add_cargo">Add Cargo</string>

</resources>