<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.trifonov.packship.viewmodel.inventory.InventoryItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_inventory_item"
        android:onClick="@{() -> viewModel.onItemClicked()}">

        <ImageView
            android:id="@+id/img_inventory"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_single_inventory"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_accepted_containers_value"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/width"
            android:typeface="sans"
            app:layout_constraintStart_toEndOf="@id/img_inventory"
            app:layout_constraintTop_toTopOf="@id/img_inventory" />

        <TextView
            android:id="@+id/txt_width_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@{viewModel.width}"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toEndOf="@id/txt_width"
            app:layout_constraintTop_toTopOf="@id/txt_width"
            tools:text="400" />

        <TextView
            android:id="@+id/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="@id/img_inventory"
            app:layout_constraintStart_toStartOf="@id/txt_width" />

        <TextView
            android:id="@+id/txt_height_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@{viewModel.height}"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toEndOf="@id/txt_height"
            app:layout_constraintTop_toTopOf="@id/txt_height"
            tools:text="600" />

        <TextView
            android:id="@+id/txt_accepted_containers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/accepted_containers"
            app:layout_constraintBottom_toBottomOf="@id/txt_accepted_containers_value"
            app:layout_constraintEnd_toStartOf="@id/txt_accepted_containers_value"
            app:layout_constraintTop_toTopOf="@id/txt_accepted_containers_value" />

        <TextView
            android:id="@+id/txt_accepted_containers_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.acceptedContainers}"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_inventory"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="25" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>