<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.trifonov.packship.viewmodel.supplier.SupplierItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_inventory_item">


        <ImageView
            android:id="@+id/img_delivery_truck"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            app:imageResource="@{viewModel.supplierIcon}"
            tools:src="@drawable/ic_supplier_truck_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_loaded_containers_value"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:visibility="@{viewModel.isAvailable}"
            app:layout_constraintTop_toTopOf="@id/img_delivery_truck"
            app:layout_constraintStart_toStartOf="@id/img_delivery_truck"
            android:src="@drawable/ic_close"
            android:id="@+id/img_not_available"
            android:layout_width="20dp"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/txt_max_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/maximum_weight"
            android:typeface="sans"
            app:layout_constraintStart_toEndOf="@id/img_delivery_truck"
            app:layout_constraintTop_toTopOf="@id/img_delivery_truck" />

        <TextView
            android:id="@+id/txt_max_weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@{viewModel.maximumWeight}"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toEndOf="@id/txt_max_weight"
            app:layout_constraintTop_toTopOf="@id/txt_max_weight"
            tools:text="400" />

        <TextView
            android:id="@+id/txt_loaded_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadedWeight"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="@id/img_delivery_truck"
            app:layout_constraintStart_toStartOf="@id/txt_max_weight" />

        <TextView
            android:id="@+id/txt_loaded_weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@{viewModel.loadedWeight}"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toEndOf="@id/txt_loaded_weight"
            app:layout_constraintTop_toTopOf="@id/txt_loaded_weight"
            tools:text="600" />

        <TextView
            android:id="@+id/txt_loaded_containers_containers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/loadedContainers"
            app:layout_constraintBottom_toBottomOf="@id/txt_loaded_containers_value"
            app:layout_constraintEnd_toStartOf="@id/txt_loaded_containers_value"
            app:layout_constraintTop_toTopOf="@id/txt_loaded_containers_value" />

        <TextView
            android:id="@+id/txt_loaded_containers_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.loadedContainers}"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_delivery_truck"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="25" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>